k8s/auth-service/auth-service-gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: auth-service-gateway
spec:
  gatewayClassName: nginx
  listeners:
  - name: http-auth-service-8001
    protocol: HTTP
    port: 8001
    allowedRoutes:
      namespaces:
        from: Same
