k8s/auth-service/auth-service-httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: auth-service-httproute
spec:
  parentRefs:
    - name: auth-service-gateway
      sectionName: http-auth-service-8001
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: auth-service-svc
          port: 8001
